	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
09/25
	* Added Ninja/Gunslinger job exp as separate exp chart [Playtester]
	* Immaterial Sword now has a 3% chance of reducing target's sp by 30% [Playtester]
09/23
	* Now Valkyrie Randgris will only resummon when she has less than 3 slaves [Playtester]
09/21
	* Implemented Rachel Sanctuary mob skills [Playtester]
09/18
	* Corrected Ki Explosion to have range 1 and to take your weapon's element.
	  [Skotlex]
	* Fixing Holden combo not draining sp correctly [Playtester]
	* Added official Rachel Sanctuary mob stats [Playtester]
	* Fixed the order of mob skills thanks to [Leon] [Playtester]
	* Changed NPC_CHANGEUNDEAD from a self skill to a targetted skill. Changed
	  it's duration to 30 secs. [Skotlex]
09/17
	* Updated some item names according to info from Haplo [Playtester]
	* Fixed some Thanatos mob names [Playtester]
09/16
	* Added NPC_CHANGEUNDEAD to the skill_cast_db, fixes it apparently doing
	  "nothing". [Skotlex]
09/15
	* Added the remaining drop changes which I missed before [Playtester]
09/14
	* Fixed X.3 Cooking drop rates [Playtester]
	- also updated related aegis item names
	- now our db is official up to X.3
	* Corrected Smokie's pet script to use petskillbonus instead of "bonus"
	  [Skotlex]
	* Fixed Abyss Lake drop rates [Playtester]
	- also updated related aegis item names
	* Fixed Thanatos Tower drop rates [Playtester]
	- also updated some related aegis item names
09/13
	* Started fixing up X.3 drop rates [Playtester]
09/12
	* Fixed NPC_ATTRICHANGE being targeted rather than self [Playtester]
	* Fixed Vesper's summoning behavior [Playtester]
09/11