@@ -610,13 +610,13 @@
 33,5042,5	//Bao Bao
 33,5066,1	//Succubus Horn
 // Lotto Box
-35,7391
-35,7392
-35,7393
-35,7394
-35,7395
-35,7396
-35,7397
-35,7398
-35,7540
-35,7541
+35,7391,1
+35,7392,1
+35,7393,1
+35,7394,1
+35,7395,1
+35,7396,1
+35,7397,1
+35,7398,1
+35,7540,1
+35,7541,1
